# PaperRadar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: default.json  light.json  mineru_one.json
data/daily/: 2026-05-21.json  2026-05-22.json  2026-05-23.json
data/daily/arxiv/: 2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json
data/daily/eartharxiv/: 2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json
data/daily/public/: 2026-05-22.json
docs/: README.zh.md  index.html
docs/data/: latest.arxiv.json  latest.eartharxiv.json  latest.json
paperradar/: __init__.py  arxiv_client.py  cli.py  config.py  eartharxiv_client.py  emailer.py  env.py  llm.py  migrate.py  pdf_parse.py  pipeline.py  query.py  registry.py  render.py  status.py  storage.py  trend.py
paperradar/paper_parse/: llm_aid_utils.py  local_pdf_parser.py  paper_processor.py  utils.py
paperradar/paper_parse/docs/: IMPLEMENTATION_SUMMARY.md  LOCAL_PARSER_USAGE.md
scripts/: check_mineru_deps.py  clean_env.py  health_check.sh  import_kgforge_env.py  inspect_categories.py  proxy_probe.py  repair_bad_markdown.py  run_daily.sh  server_daily_loop.sh  server_daily_push.sh
scripts/tests/: test_light_modes.sh
